chore: add gradle build pipeline (#12)
* chore: add gradle build pipeline

* fix: gradle build issues